[gd_scene load_steps=4 format=2]

[ext_resource path="res://Modules/menus/options_menu_parts/AudioBusVolumeSlider.gd" type="Script" id=1]
[ext_resource path="res://Modules/kenney_audio/music/Hit jingles/jingles_HIT01.ogg" type="AudioStream" id=2]
[ext_resource path="res://Modules/menus/ui_sounds/UiSoundPack.tscn" type="PackedScene" id=3]

[node name="AudioBusVolumeSlider" type="HBoxContainer"]
margin_top = 238.0
margin_right = 988.0
margin_bottom = 262.0
alignment = 1
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 224.0
margin_top = 5.0
margin_right = 224.0
margin_bottom = 19.0

[node name="Control" type="Control" parent="."]
margin_left = 228.0
margin_right = 228.0
margin_bottom = 24.0

[node name="HSlider" type="HSlider" parent="."]
margin_left = 232.0
margin_right = 360.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 0 )
min_value = -40.0
max_value = 5.0
step = 0.5

[node name="UiSoundPack" parent="HSlider" instance=ExtResource( 3 )]

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 364.0
margin_right = 508.0
margin_bottom = 24.0
text = "options.sfx.muted"

[node name="UiSoundPack2" parent="CheckBox" instance=ExtResource( 3 )]

[node name="Control2" type="Control" parent="."]
margin_left = 512.0
margin_right = 528.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 0 )

[node name="BtnTest" type="Button" parent="."]
margin_left = 532.0
margin_right = 643.0
margin_bottom = 24.0
text = "options.sfx.test"

[node name="UiSoundPack4" parent="BtnTest" instance=ExtResource( 3 )]
sfx_button_pressed = null

[node name="Control3" type="Control" parent="."]
margin_left = 647.0
margin_right = 663.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 0 )

[node name="BtnReset" type="Button" parent="."]
margin_left = 667.0
margin_right = 763.0
margin_bottom = 24.0
text = "generic.reset"

[node name="UiSoundPack3" parent="BtnReset" instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="BtnTest" to="." method="_on_BtnTest_pressed"]
[connection signal="pressed" from="BtnReset" to="." method="_on_BtnReset_pressed"]
